--- a/mobifront/pubspec.yaml
+++ b/mobifront/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
   cupertino_icons: ^1.0.2
   
   intl: ^0.17.0
@@ -35,6 +38,13 @@ dependencies:
 
   fl_chart: ^0.40.0
 
+  location:
+
+  platform_device_id: ^1.0.1
+
+  # firebase 
+  firebase_core: ^1.10.0
+  cloud_firestore: ^3.1.0
  
 dev_dependencies:
   flutter_test:
